# ShoppingList

./: .gitignore  README.md
.github/workflows/: backend-container-app.yml  frontend-container-app.yml  infrastructure-pipeline.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  controller.py  schemas.py
frontend/: Dockerfile  app.py  pyproject.toml  requirements.txt
infra/deploy/: dev.tfvars  main.tf  providers.tf  terraform.tfvars  variables.tf
